@@ -1,3 +1,7 @@
+2011-01-04  Jeff Segars  <jeff@webempoweredchurch.org>
+
+	* Follow-up to #15853: Make admin panel styling more bulletproof and remove duplicate styles
+
 2011-01-03  Jigal van Hemert  <jigal@xs4all.nl>
 
 	* Follow-up to #16780: PHP warning in any system BE module
